2008-11-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eval_impl): note evaluated expressions correctly

2008-11-26  Ales Hakl  <ales at hakl dot net>

	* doc/type-hierarchy: some incomplete chart

	* src/repl.c (main): fixed expression evaluation code

2008-11-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): inherit display function

2008-11-24  Ales Hakl  <ales at hakl dot net>

	* src/native.c: access to slots from LISP-code

	* src/dfsch.c: basic slot accessors and related C-level API 

2008-11-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: meta-type class 

2008-11-18  Ales Hakl  <ales at hakl dot net>

	* src/random.c: random number generator
	More or less complete RNG

2008-11-11  Ales Hakl  <ales at hakl dot net>

	* src/introspect.c (dfsch_format_stack_trace): pretty-print stack
	traces

	* src/dfsch.c (dfsch_apply_impl): Application of nil leads to error

2008-11-03  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_mod_inv): modular multiplicative inverse

2008-10-14  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (hash_t): only two types of hashtable (eqv? is not
	significantly useful and all usecases are covered by equal?)

	* src/bignum.c (logop): correct bitwise operations for bignums

2008-10-13  Ales Hakl  <ales at hakl dot net>

	* src/ports.c: ports for standard stdio streams

	* lib/inet.c (dfsch_inet_xml_escape): work with c strings (XML
	cannot contain NUL and strbuf magic is thus only added complexity)

	* src/ports.c (dfsch_port_write_cstr): direct output of c strings
	(for simple construction of callbacks)

2008-10-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (make_symbol): copy symbol name

2008-10-07  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_set_frame_context): fill in context fields in
	environment frame

	* src/types.h (struct environment_t): add fields for procedure and
	arguments

2008-09-30  Ales Hakl  <ales at hakl dot net>
